[package]
name = "my-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "rendezvous_hashing"
harness = false

[[bench]]
name = "rate_limit"
harness = false

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
axum = { version = "0.6.18", features = ["ws"] }
blake2b_simd = "1.0.1"
deadpool-redis = { version = "0.12.0", features = ["serde"] }
log = "0.4.17"
once_cell = "1.17.1"
rand = "0.8.5"
redis = { version = "0.23.0", default-features = false, features = ["script"] }
reqwest = "0.11.18"
scopeguard = "1.1.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
siphasher = "0.3.10"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
tokio-tungstenite = "0.19.0"
toml = "0.7.4"
tower = { version = "0.4.13", features = ["balance", "util", "load", "discover"] }
tower-http = { version = "0.4.0", features = ["cors", "timeout", "compression-gzip"] }

[dev-dependencies]
criterion = { version = "0.4.0", default-features = false, features = ["async_tokio"] }
