[package]
name = "my-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "rendezvous_hashing"
harness = false

[[bench]]
name = "rate_limit"
harness = false

[profile.release]
lto = "thin"

[dependencies]
anyhow = "1.0.71"
arc-swap = "1.6.0"
async-trait = "0.1.68"
axum = { version = "0.6.18", features = ["ws"] }
blake3 = "1.3.3"
clap = { version = "4.3.0", features = ["derive", "env"] }
deadpool-redis = { version = "0.12.0", features = ["serde"] }
env_logger = "0.10.0"
futures = "0.3.28"
itertools = "0.10.5"
jsonrpsee-types = "0.18.2"
log = "0.4.17"
mimalloc = { version = "0.1.37", default-features = false }
once_cell = "1.17.1"
prometheus-client = "0.21.1"
rand = "0.8.5"
redis = { version = "0.23.0", default-features = false, features = ["script"] }
reqwest = { version = "0.11.18", default-features = false }
scopeguard = "1.1.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = { version = "1.0.96", features = ["raw_value"] }
siphasher = "0.3.10"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
# Use 0.19 when axum dep is updated
tokio-tungstenite = "0.18"
toml = "0.7.4"
tower = { version = "0.4.13", features = ["balance", "util", "load", "discover"] }
tower-http = { version = "0.4.0", features = ["cors", "timeout", "compression-gzip"] }

[dev-dependencies]
criterion = { version = "0.4.0", default-features = false, features = ["async_tokio"] }
