[package]
name = "axon-proxy"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "rendezvous_hashing"
harness = false

[[bench]]
name = "rate_limit"
harness = false

[profile.release]
lto = "thin"

[dependencies]
anyhow = "1.0.75"
arc-swap = "1.6.0"
async-trait = "0.1.74"
axum = { version = "0.6.20", features = ["ws"] }
blake3 = "1.5.0"
clap = { version = "4.4.6", features = ["derive", "env"] }
deadpool-redis = { version = "0.13.0", features = ["serde"] }
env_logger = "0.10.0"
fastrand = "2.0.1"
futures = "0.3.28"
itertools = "0.11.0"
jsonrpsee-types = "0.20.2"
log = "0.4.20"
mimalloc = { version = "0.1.39", default-features = false }
once_cell = "1.18.0"
prometheus-client = "0.21.2"
redis = { version = "0.23.3", default-features = false, features = ["script"] }
reqwest = { version = "0.11.22", default-features = false }
scopeguard = "1.2.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = { version = "1.0.107", features = ["raw_value"] }
siphasher = "1.0.0"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full"] }
# Use 0.19 when axum dep is updated
tokio-tungstenite = "0.20.1"
toml = "0.8.2"
tower = { version = "0.4.13", features = ["balance", "util", "load", "discover"] }
tower-http = { version = "0.4.4", features = ["cors", "timeout", "compression-gzip"] }

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false, features = ["async_tokio"] }
rand = "0.8.5"
